force-app/main/default/objects/Milestone_Moment__c/Milestone_Moment__c.object-meta.xml
<CustomObject>
    <description>Provides a record of what the subscriber data is at a specific point in time in appAdmin</description>
    <label>Milestone Moment</label>
    <nameField>
        <displayFormat>MM-{0000000000}</displayFormat>
        <label>Milestone Moment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Moments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>