force-app/main/default/objects/Milestone_Moment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account that the Milestone data is for</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Milestone Moments</relationshipLabel>
    <relationshipName>Milestone_Moments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>