force-app/main/default/objects/Milestone_Moment__c/fields/Group_Msg_Batches_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Group_Msg_Batches_Last_90_Days__c</fullName>
    <description>Number of times a group message has been sent in the last 90 days</description>
    <label>Group Msg Batches Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>