force-app/main/default/objects/Milestone_Moment__c/fields/Group_Msg_Batches_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Msg_Batches_to_Date__c</fullName>
    <description>Total times a group message has been sent out</description>
    <label>Group Msg Batches to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>