force-app/main/default/objects/Milestone_Moment__c/fields/Group_Msg_Patrons_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Group_Msg_Patrons_Last_90_Days__c</fullName>
    <description>Total number of Patrons that have received a group message in the last 90 days</description>
    <label>Group Msg Patrons Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>