force-app/main/default/objects/Milestone_Moment__c/fields/Group_Msg_Patrons_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Msg_Patrons_to_Date__c</fullName>
    <description>Total number of patrons that have received a group message</description>
    <label>Group Msg Patrons to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>