force-app/main/default/objects/Milestone_Moment__c/fields/Limelight_Appt_Requests_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Limelight_Appt_Requests_Last_90_Days__c</fullName>
    <description>Limelight_Appt_Requests_Last_90_Days</description>
    <label>Limelight Appt Requests Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>