force-app/main/default/objects/Milestone_Moment__c/fields/Limelight_Appt_Requests_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Limelight_Appt_Requests_to_Date__c</fullName>
    <label>Limelight Appt Requests to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>