force-app/main/default/objects/Milestone_Moment__c/fields/Newsletter_Msg_Batches_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Msg_Batches_Last_90_Days__c</fullName>
    <description>Total number of newsletters sent in the last 90 days</description>
    <label>Newsletter Msg Batches Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>