force-app/main/default/objects/Milestone_Moment__c/fields/Newsletter_Msg_Batches_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Msg_Batches_to_Date__c</fullName>
    <description>Total number of Newsletters sent to date</description>
    <label>Newsletter Msg Batches to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>