force-app/main/default/objects/Milestone_Moment__c/fields/Num_Surveys_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Num_Surveys_Last_90_Days__c</fullName>
    <label>Number of Surveys Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>