force-app/main/default/objects/Milestone_Moment__c/fields/Num_Surveys_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Num_Surveys_to_Date__c</fullName>
    <label>Number of Surveys to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>