force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_Calls_Generated_from_HG__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls_Generated_from_HG__c</fullName>
    <label>Number of Calls Generated from HG</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>