force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_Confirmations_received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Confirmations_received__c</fullName>
    <label>Number of Confirmations Received via SR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>