force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_HG_Profile_Views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HG_Profile_Views__c</fullName>
    <label>Number of HG Profile Views</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>