force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_LL_Appt_Requests_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LL_Appt_Requests_Received__c</fullName>
    <label>Number of LL Appt Requests Received</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>