force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_Patient_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Patient_Referrals__c</fullName>
    <label>Number of Patient Referrals</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>