force-app/main/default/objects/Milestone_Moment__c/fields/Number_of_Reviews_Generated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviews_Generated__c</fullName>
    <label>Number of Reviews Generated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>