force-app/main/default/objects/Milestone_Moment__c/fields/Pct_Survey_Responses_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Pct_Survey_Responses_Last_90_Days__c</fullName>
    <description>pct_survey_responses_90_days</description>
    <label>Percent Survey Responses Last 90 Days</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>