force-app/main/default/objects/Milestone_Moment__c/fields/Pct_Survey_Responses_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Pct_Survey_Responses_to_Date__c</fullName>
    <label>Percent Survey Responses to Date</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>