force-app/main/default/objects/Milestone_Moment__c/fields/Recare_Dollars_Generated_via_SR__c.field-meta.xml
<CustomField>
    <fullName>Recare_Dollars_Generated_via_SR__c</fullName>
    <label>Recare Dollars Generated via SR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>