force-app/main/default/objects/Milestone_Moment__c/fields/Reminder_Msgs_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Msgs_Last_90_Days__c</fullName>
    <description>Number of Reminder messages sent in the last 90 days</description>
    <label>Reminder Msgs Last 90 Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>