force-app/main/default/objects/Milestone_Moment__c/fields/Reminder_Msgs_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Msgs_to_Date__c</fullName>
    <description>Total number of Reminders sent to date</description>
    <label>Reminder Msgs to Date</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>