force-app/main/default/objects/Milestone_Moment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Number_of_Calls_Generated_from_HG__c</columns>
    <columns>Number_of_Competitors_Blocked__c</columns>
    <columns>Number_of_Confirmations_received__c</columns>
    <columns>Number_of_HG_Profile_Views__c</columns>
    <columns>Number_of_LL_Appt_Requests_Received__c</columns>
    <columns>Number_of_Patient_Referrals__c</columns>
    <columns>Number_of_Patients__c</columns>
    <columns>Number_of_Reviews_Generated__c</columns>
    <columns>Recare_Dollars_Generated_via_SR__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>